# available

app/: README.md  pyproject.toml  requeriments.txt  requirements.txt  sql_app.db
app/app/: crud.py  db.py  main.py  models.py  schemas.py
app/collections/: challenge.postman_collection.json
app/resource/: providers.json
app/tests/: test_main.py
